Revision history for Perl extension Net-OpenStack-Swift

{{$NEXT}}

0.08 2016-03-11T07:59:10Z
    - Add config loader (~/.swift.pl.conf)
    - Multi CPU support by default (swift.pl)
    - Fixed a bug empty OS_ environments (swift.pl)

0.07 2016-03-11T03:00:48Z
    - Add support pseudo hierarchical folders and directories
    - Add support (beta) parallel downloads and uploads (OS_SWIFT_ASYNC=1)

0.06 2016-03-04T08:53:13Z
    - Add command-line script (swift.pl)
    - Add support OS_* environments (OS_AUTH_URL,OS_TENANT_NAME,OS_USERNAME,OS_PASSWORD)

0.05 2016-03-01T06:31:56Z
    - Enable to set Http Client timeout, user_agent options

0.04 2015-05-14T06:49:31Z
    - Add support for 1.0 auth. (enatocron)

0.03 2015-03-26T14:38:35Z
    - InnerKeystone->service_catalog_url_for support region
    - rename InnerKeystone V3_0
    - get_object: support write FileHandle
    - put_object: support parameters etag, query_string
    - fix documents

0.02 2015-03-23T08:19:40Z
    - put_object: support FileHandle content
    
0.01 2015-03-19T05:24:22Z

    - original version
