@@ -79,7 +79,7 @@
          "web" : "https://github.com/masakyst/Net-OpenStack-Swift"
       }
    },
-   "version" : "0.08",
+   "version" : "0.09",
    "x_contributors" : [
       "RenatoCRON <renato.cron@gmail.com>",
       "Masaaki Saito <masakyst.mobile@gmail.com>"
