@@ -230,6 +230,8 @@ cli examples
     $ swift.pl get container1/hello.txt > hello.txt (download file)
     $ swift.pl delete container1/hello.txt
     $ swift.pl delete container1
+    $ swift.pl delete 'container1/*'  (require quoting!)
+    $ swift.pl post static '{"X-Container-Read":".r:*"}'
 
 multi cpu support (parallel downloads and uploads)
 
